--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -41,7 +41,7 @@
       </div>
       <img class="banniere" src="../images/banniere.png" alt="Baniere">
     </header>
-    
+
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock" id="limitedWidthBlock">
         <div class="cartAndFormContainer" id="cartAndFormContainer">
@@ -50,7 +50,7 @@
             <section id="cart__items">
              <!--  <article class="cart__item" data-id="{product-ID}" data-color="{product-color}">
                 <div class="cart__item__img">
-                  <img src="../images/product01.jpg" alt="Photographie d'un canapé">
+                  <img src="../../back/images/kanap01.jpeg" alt="Photographie d'un canapé">
                 </div>
                 <div class="cart__item__content">
                   <div class="cart__item__content__description">
@@ -109,7 +109,7 @@
         </div>
       </div>
     </main>
-    
+
     <footer>
       <div class="limitedWidthBlockContainer footerMain">
         <div class="limitedWidthBlock">
